--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
     "postcss": "^8.4.45",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
     "ts-node": "^10.0.0",
     "typescript": "~4.5.4",
