--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jarvis",
   "productName": "jarvis",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "Control your computer with AI",
   "keywords": [],
   "author": {
@@ -48,6 +48,11 @@
     "@ai-sdk/openai": "^0.0.58",
     "@fastify/cors": "^9.0.1",
     "@phosphor-icons/react": "^2.1.7",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-form": "^0.1.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slider": "^1.2.0",
     "ai": "^3.3.29",
     "dotenv": "^16.4.5",
     "electron-squirrel-startup": "^1.0.1",
@@ -56,6 +61,7 @@
     "react-dom": "^18.3.1",
     "systeminformation": "^5.23.5",
     "tailwind-merge": "^2.5.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   }
 }
